--- a/frontend/src/assets/css/Agreement.css
+++ b/frontend/src/assets/css/Agreement.css
@@ -1,10 +1,22 @@
 .Agreement-form {
-    display: inline-block;
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     margin-top: 20px;
 }
+
+.logo-container {
+    margin-left: 15px;
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+    }
+
+    .logo-container-1 {
+        margin-left: 9px;
+    }
+    
 
 .division-line {
     border-top: 1px solid #E7E6E6;
@@ -15,15 +27,17 @@
     width: 700px;
     height: 370px;
     border: 2px solid #E7E6E6;
-    margin-left: 380px;
+    /* margin-left: 380px; */
     margin-top: 30px;
 }
 
 .border1{
+    display: flex;
+    align-items: center;
     width: 357px;
     height: 40px;
-    margin-left: 550px;
     margin-top: 50px;
+    margin-left: 170px;
     border: 1px solid #BF5E49;
     border-radius: 15px;
 }
