--- a/frontend/src/assets/css/SignUP.css
+++ b/frontend/src/assets/css/SignUP.css
@@ -1,13 +1,44 @@
 .SignUP-form {
+    min-height: 70vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     height: 30vh;
-    margin-left: 500px;
   }
+
+  .SignUP-form1 {
+    display: flex;
+    flex-direction: row;
+  }
+
 
   .division-line {
     border-top: 1px solid #E7E6E6;
     margin: 12px 0px;
+}
+
+.select-style {
+  display: flex;
+  align-items: center;
+  width: 50px;
+  height: 40px;
+  font-size: 14px ;
+  margin-top: 15px;
+  margin-left: 10px;
+  border: 1.5px solid #b0acacc9;
+  border-radius: 15px;
+  padding: .5em;
+}
+
+.border1{
+  display: flex;
+  align-items: center;
+  width: 407px;
+  height: 40px;
+  margin-left: 10px;
+  margin-top: 50px;
+  margin-bottom: 100px;
+  border: 1px solid #BF5E49;
+  border-radius: 15px;
 }
