--- a/frontend/src/assets/css/Agreement.css
+++ b/frontend/src/assets/css/Agreement.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: 20px;
+    margin-top: 80px;
 }
 
 .logo-container {
@@ -34,10 +34,10 @@
 .border1{
     display: flex;
     align-items: center;
-    width: 357px;
+    width: 407px;
     height: 40px;
     margin-top: 50px;
-    margin-left: 170px;
+    margin-bottom: 100px;
     border: 1px solid #BF5E49;
     border-radius: 15px;
-}
+  }
