--- a/frontend/src/assets/css/damnstory.css
+++ b/frontend/src/assets/css/damnstory.css
@@ -3,7 +3,17 @@
   font-size: 26px;
   font-weight: bold;
   margin-top: 30px;
+}
+
+.header-container {
+  display: flex;
+  align-items: center;
+  margin-top: 30px;
   margin-left: 120px;
+}
+
+.header-container p {
+  margin-right: 1100px;
 }
 
 .damnstorycount {
