--- a/frontend/src/assets/css/damnstorywrite.css
+++ b/frontend/src/assets/css/damnstorywrite.css
@@ -39,3 +39,38 @@
     margin-bottom: 20px;
 }
 
+.damnstorycontent {
+    display: flex; /* Use flexbox to arrange items in a row */
+    align-items: center; /* Align items vertically in the center */
+    margin-top: 40px;
+    margin-left: 200px;
+}
+
+.damnstorycontent p {
+    font-family: 'GmarketSans', sans-bold;
+    font-size: 18px;
+    font-weight: bold;
+    margin-right: 150px; /* Add spacing between 제목 and input */
+}
+
+.content-input {
+    font-family: 'GmarketSans', sans-bold;
+    font-size: 18px;
+    padding: 20px;
+    border: 1px solid black;
+    border-radius: 8px;
+    width: 900px;
+    height: 300px;
+    margin-bottom: 20px;
+}
+
+.cancel-regist {
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 150px;
+    margin-top: 20px;
+}
+
+.button-spacing {
+    margin: 0 10px; /* 여기서 간격을 조절할 수 있습니다 */
+}
