--- a/frontend/src/assets/css/SignUP.css
+++ b/frontend/src/assets/css/SignUP.css
@@ -48,6 +48,7 @@
   max-width: 1200px; /* Optional: Add a max-width to limit the modal's width */
   height: 100%;
   max-height: 2000px;
+  margin-bottom: 50px;
 }
 
 .custom-modal-box {
@@ -68,16 +69,17 @@
   width: 150px;
   border: 1px solid #E7E6E6;
   padding: 10px;
-  margin-left: 140px;
 }
 
 .city-items-container {
-  position: relative;
-  /* top: 89px; */
-  left: 30px;
+  /* position: fixed; */
+  margin-top: 15px;
+  margin-bottom: 15px;
+  margin-right: 1000px;
 }
+
 
 .custom-modal-box-whole {
   display: flex; 
-  align-items: center;
+  /* position: fixed; */
 }
