--- a/frontend/src/assets/css/SignUP.css
+++ b/frontend/src/assets/css/SignUP.css
@@ -48,13 +48,14 @@
   max-width: 1200px; /* Optional: Add a max-width to limit the modal's width */
   height: 100%;
   max-height: 2000px;
-  margin-bottom: 50px;
+  margin-top: 50px;
+  margin-bottom: 200px;
 }
 
 .custom-modal-box {
   display: flex;
   flex-direction: column;
-  width: 150px;
+  width: 300px;
   border: 1px solid #E7E6E6;
   padding: 10px;
 }
@@ -66,20 +67,17 @@
 
 .custom-modal-box2 {
   flex-direction: column;
-  width: 150px;
+  width: 300px;
   border: 1px solid #E7E6E6;
   padding: 10px;
 }
 
 .city-items-container {
-  /* position: fixed; */
   margin-top: 15px;
   margin-bottom: 15px;
   margin-right: 1000px;
 }
 
-
 .custom-modal-box-whole {
   display: flex; 
-  /* position: fixed; */
 }
