--- a/frontend/src/assets/css/Header.css
+++ b/frontend/src/assets/css/Header.css
@@ -37,7 +37,7 @@
   color: black; /* Set color for the | separator */
 }
 
-.session-id {
+.session {
   margin-right: 100px;
   margin-top: 30px;
 }
