--- a/frontend/src/assets/css/SignUP.css
+++ b/frontend/src/assets/css/SignUP.css
@@ -39,18 +39,14 @@
   height: 40px;
   margin-left: 10px;
   margin-top: 50px;
-  margin-bottom: 100px;
   border: 1px solid #BF5E49;
   border-radius: 15px;
 }
 
 .custom-modal-content {
-  width: 90%; /* Adjust the width as per your requirement */
+  width: 100%; /* Adjust the width as per your requirement */
   max-width: 1200px; /* Optional: Add a max-width to limit the modal's width */
-  height: 100%;
-  max-height: 2000px;
-  margin-top: 50px;
-  margin-bottom: 200px;
+  height: 90%;
 }
 
 .custom-modal-box {
@@ -65,18 +61,59 @@
   border: 2px solid #bf5f4977;
 }
 
+.items-container {
+  width: 100%; 
+  max-width: 350px;
+}
+
 .city-items-container {
+  width: 100%; 
+  max-width: 500px;
   margin-top: 15px;
   margin-bottom: 15px;
 }
 
 .dong-items-container {
+  width: 100%; 
+  max-width: 500px;
   margin-top: 15px;
   margin-bottom: 15px;
   margin-left: 15px;
-  margin-right: 250px;
+  margin-right: 200px;
 }
 
 .custom-modal-box-whole {
   display: flex;
+}
+
+.scrollable-container {
+  max-height: 500px;
+  max-width: 500px;
+  overflow-y: auto;
+}
+
+.addedWorkArea-style {
+  text-align: center;
+  background-color: #bf5f491f;
+  padding: 5px;
+  border-radius: 15px;
+}
+
+.close {
+  right: 10px;
+  border: none;
+  color: #ce9a75;
+  background-color: #bf5f4900;
+}
+
+.left-align-footer {
+  display: flex;
+  flex-direction: row; /* Arrange items horizontally */
+  flex-wrap: wrap; /* Wrap items to the next row if they overflow */
+  justify-content: flex-start;
+}
+
+.left-align-footer > div{
+  margin-right: 10px;
+  margin-left: 10px;
 }
