--- a/frontend/src/assets/css/Page3Header.css
+++ b/frontend/src/assets/css/Page3Header.css
@@ -51,12 +51,6 @@
     margin-bottom: 3px;
 }
 
-
-
-
-
-
-
 .custom-modal-box-whole-rank {
     display: flex;
     margin-top: 20px;
@@ -132,7 +126,7 @@
 
   .addedWorkArea-style-rank {
     background-color: #bf5f491f;
-    padding: 5px 20px;
+    padding: 5px;
     border-radius: 15px;
   }
 
@@ -215,6 +209,7 @@
   background-color: white;
   border: 3px solid #D2D2D2;
   text-align: right;
+  padding-right: 10px;
 }
 
 .inputAge-btn-style {
