--- a/frontend/src/assets/css/damnrankBoard.css
+++ b/frontend/src/assets/css/damnrankBoard.css
@@ -9,3 +9,76 @@
   .label-margin {
     margin-left: 10px;
   }
+
+  .items-align-rank {
+    display: flex;
+    justify-content: center;
+}
+
+.default-filter-rank11 {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 370px;
+    margin-right: 370px;
+    padding-top: 10px;
+    padding-bottom: 15px;
+    border: 1px solid #D9D9D9;
+    border-radius: 5px;
+    background-color: white;
+}
+
+.label-style11 {
+  margin-top: 10px;
+  margin-left: 20px;
+  margin-right: 20px;
+  position: relative;
+}
+
+.label-style111 {
+  margin-right: 10px;
+  position: relative;
+  color: rgba(192, 9, 9, 0.916);
+}
+
+.badge-style {
+  margin-left: 70px;
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+.gender-image {
+  margin-left: 60px;
+  margin-top: 15px;
+}
+
+.name-style {
+  display: inline-flex;
+  flex-direction: column;
+  margin-left: 30px;
+}
+
+.gender-age {
+  display: inline-block;
+  margin-top: 2px; /* Adjust as needed */
+  margin-bottom: 10px;
+  font-size: 14px;
+}
+
+.title-style {
+  display: inline-flex;
+  flex-direction: row;
+  margin-left: 25px;
+}
+
+.workjob-style {
+  display: flex;
+  margin-top: 2px; /* Adjust as needed */
+  margin-bottom: 10px;
+  font-size: 14px;
+}
+
+.address-style {
+  position: absolute;
+  right: 430px;
+  float: right;
+}
