--- a/frontend/src/assets/css/damnprofile.css
+++ b/frontend/src/assets/css/damnprofile.css
@@ -116,5 +116,17 @@ font-size: 27px;
   background-color: #FFFFFF;
 }
 
+.badge1-button-style {
+  margin-left: 80px;
+  margin-top: 20px;
+  width: 180px;
+  border-radius: 5px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  font-size: 16px;
+}
+
 
   
