--- a/frontend/src/assets/css/damnprofile.css
+++ b/frontend/src/assets/css/damnprofile.css
@@ -1,7 +1,7 @@
 .whole-box {
     margin-left: 250px;
     margin-right: 500px;
-    margin-top: 50px;
+    margin-top: 25px;
     width: 100%;
     max-width: 1500px;
     height: 750px;
@@ -126,6 +126,50 @@ font-size: 27px;
   padding-top: 5px;
   padding-bottom: 5px;
   font-size: 16px;
+}
+
+.toggleInner {
+  display: block;
+  width: 200%;
+}
+
+.toggleInner:before,
+.toggleInner:after {
+  float: left;
+  width: 50%;
+  height: 36px;
+  padding: 0;
+  box-sizing: border-box;
+  content: "";
+}
+
+.toggleInner:before {
+  background-color: pink;
+}
+
+.toggleInner:after {
+  background-color: #bbb;
+}
+
+.switch {
+  display: block;
+  width: 24px;
+  margin: 5px;
+  background: #fff;
+  position:relative;
+  top: 0;
+  bottom: 0;
+  right: 40px;
+  border: 0 solid #bbb;
+  border-radius: 50%;
+ }
+
+ .checkbox:checked + .label .toggleInner {
+  margin-left: 0;
+}
+
+.checkbox:checked + .label .switch {
+  right: 0px;
 }
 
 
