--- a/frontend/src/assets/css/damnlistwrite.css
+++ b/frontend/src/assets/css/damnlistwrite.css
@@ -33,6 +33,48 @@
     margin-left: 40px;
 }
 
+
+.damnlistbranch p {
+    font-family: 'GmarketSans', sans-bold;
+    font-size: 18px;
+    font-weight: bold;
+    margin-right: 170px; /* Add spacing between 제목 and input */
+}
+
+.damnlistbranch {
+    display: flex; /* Use flexbox to arrange items in a row */
+    align-items: center; /* Align items vertically in the center */
+    margin-top: 40px;
+    margin-left: 200px;
+}
+
+.damnlistadditionalLimit p {
+    font-family: 'GmarketSans', sans-bold;
+    font-size: 18px;
+    font-weight: bold;
+    margin-right: 150px; /* Add spacing between 제목 and input */
+}
+
+.damnlistadditionalLimit {
+    display: flex; /* Use flexbox to arrange items in a row */
+    align-items: center; /* Align items vertically in the center */
+    margin-top: 40px;
+    margin-left: 200px;
+}
+
+.branch-input {
+    font-family: 'GmarketSans', sans-bold;
+    font-size: 18px;
+    padding: 20px;
+    border: 1px solid black;
+    border-radius: 8px;
+    width: 900px;
+    height: 40px;
+    margin-bottom: 20px;
+}
+
+
+
 .damnlistrecommend p {
     font-family: 'GmarketSans', sans-bold;
     font-size: 18px;
@@ -94,7 +136,21 @@
     margin-left: 200px;
 }
 
-.damnlistworkperiod p { 
+.damnlistworktime p { 
+    font-family: 'GmarketSans', sans-bold;
+    font-weight: bold;
+}
+
+
+
+.damnlistrecruitNumber {
+    display: flex; /* Use flexbox to arrange items in a row */
+    align-items: center; /* Align items vertically in the center */
+    margin-top: 40px;
+    margin-left: 200px;
+}
+
+.damnlistrecruitNumber p { 
     font-family: 'GmarketSans', sans-bold;
     font-weight: bold;
 }
