--- a/frontend/src/assets/css/damnrankBoard.css
+++ b/frontend/src/assets/css/damnrankBoard.css
@@ -101,3 +101,7 @@
   margin-left: 50px;
   color: #848484;
 }
+
+.selected {
+  border: 4px solid rgb(74, 74, 74); /* Change the border style as needed */
+}
