--- a/frontend/src/assets/css/damnlistBoard.css
+++ b/frontend/src/assets/css/damnlistBoard.css
@@ -67,3 +67,14 @@
     align-items: center;
 }
 
+.damnitem-box {
+    margin-left: 420px;
+    margin-top: 35px;
+    width: 100%;
+    max-width: 1000px;
+    height: 230px;
+    max-height: 500px;
+    border: 1px solid #797979;
+    border-radius: 10px;
+  }
+
