--- a/frontend/src/assets/css/damnlistBoard.css
+++ b/frontend/src/assets/css/damnlistBoard.css
@@ -74,7 +74,7 @@
     max-width: 1000px;
     height: 230px;
     max-height: 500px;
-    border: 1px solid #797979;
+    border: 1px solid #D9D9D9;
     border-radius: 10px;
   }
 
