--- a/frontend/src/assets/css/damnprofile.css
+++ b/frontend/src/assets/css/damnprofile.css
@@ -197,4 +197,49 @@ font-size: 27px;
   background-color: white;
   margin-bottom: 5px;
 }
+
+
+.modal-whole-review {
+  display: flex;
+  width: 100%; /* Adjust the width as per your requirement */
+  max-width: 600px; /* Optional: Add a max-width to limit the modal's width */
+  height: 100%;
+  max-height: 630px;
+}
+
+.badge2-button-style {
+  margin-left: 70px;
+  margin-top: 70px;
+  width: 180px;
+  height: 50px;
+  border-radius: 30px;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  font-size: 17px;
+}
   
+
+.footer-button-save {
+  width: 300px;
+  color: #843C0C;
+  background-color: #FFFFFF;
+  border: 2px solid #BF5E49;
+  border-radius: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-bottom: 10px;
+}
+
+.footer-button-report {
+  width: 100px;
+  color: #843C0C;
+  background-color: #bf5f49a2;
+  border: 2px solid #BF5E49;
+  border-radius: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-right: 70px;
+  margin-bottom: 10px;
+}
