--- a/frontend/src/assets/css/Chatting.css
+++ b/frontend/src/assets/css/Chatting.css
@@ -4,3 +4,34 @@
     float: right;
     margin-right: 300px;
 }
+
+.modal-chatting-style {
+    margin-bottom: 0px;
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    float: right;
+    display: flex;
+    width: 100%;
+    max-width: 600px;
+    height: 90%;
+    max-height: 380px;
+}
+
+.custom-chatting-content {
+    background-color: #F8F0EA;
+    border: 4px solid #D9AA89;
+}
+
+.chatting-label-style {
+    margin-top: 5px;
+    margin-left: 5px;
+    font-size: 20px;
+}
+
+.chatting-label-style1 {
+    float: right;
+    margin-right: 5px;
+    margin-top: 5px;
+    font-size: 20px;
+}
