--- a/frontend/src/assets/css/damnprofile.css
+++ b/frontend/src/assets/css/damnprofile.css
@@ -16,10 +16,10 @@
   }
 
 .name-style-profile {
-display: inline-flex;
-flex-direction: column;
-margin-left: 30px;
-font-size: 27px;
+  display: inline-flex;
+  flex-direction: column;
+  margin-left: 30px;
+  font-size: 27px;
 }
 
 .label-style-profile {
@@ -209,7 +209,7 @@ font-size: 27px;
 
 .badge2-button-style {
   margin-left: 70px;
-  margin-top: 70px;
+  margin-top: 60px;
   width: 180px;
   height: 50px;
   border-radius: 30px;
@@ -219,7 +219,7 @@ font-size: 27px;
   padding-bottom: 10px;
   font-size: 17px;
 }
-  
+
 .footer-button1 {
   margin-top: 40px;
   display: flex;
@@ -248,4 +248,90 @@ font-size: 27px;
   padding-bottom: 3px;
   padding-left: 10px;
   padding-right: 10px;
+}
+
+.apply-whole-box {
+  position: relative;
+  min-height: 100%;
+  border-radius: 7px;
+  background-color: #F8F0EA;
+  border: 4px solid #D9AA89;
+}
+
+.apply-item-box {
+  margin-left: 30px;
+  margin-top: 15px;
+  margin-bottom: 20px;
+  width: 500px;
+  margin-right: 22px;
+  height: 150px;
+  max-height: 300px;
+  background-color: #FFFFFF;
+  border: 1px solid #BF5E4973;
+  border-radius: 5px;
+}
+
+.apply-item-carrer {
+  margin-left: 50px;
+  margin-top: 20px;
+  color: #B64228;
+}
+
+.apply-item-gender {
+  margin-left: 50px;
+  margin-top: 10px;
+}
+
+.apply-item-name {
+  display: inline-flex;
+  flex-direction: column;
+  margin-top: 20px;
+  margin-left: 20px;
+  font-size: 20px;
+}
+
+.apply-item-age {
+  margin-top: 0px;
+  margin-left: 0px;
+  font-size: 16px;
+}
+
+.apply-item-address {
+  float: right;
+  margin-top: 30px;
+  margin-right: 35px;
+  font-size: 16px;
+}
+
+.footer-button-profile {
+  width: 200px;
+  color: #843C0C;
+  background-color: #FFFFFF;
+  border: 2px solid #BF5E49;
+  border-radius: 10px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  padding-left: 10px;
+}
+
+.footer-button-matching {
+  margin-left: 20px;
+  width: 200px;
+  color: #843C0C;
+  background-color: #bf5f49a2;
+  border: 2px solid #BF5E49;
+  border-radius: 10px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.scrollable-item {
+  display: flex;
+  max-height: 400px;
+  flex-direction: column;
+  height: 100%;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
