--- a/frontend/src/assets/css/damnrankBoard.css
+++ b/frontend/src/assets/css/damnrankBoard.css
@@ -100,6 +100,7 @@
 }
 
 .custom-rank-content {
+  min-height: 100%;
   border-radius: 7px;
   background-color: #F8F0EA;
   border: 4px solid #D9AA89;
