마이페이지 -> 내가 지원한 땜빵 목록 완료

--- a/frontend/src/assets/css/damnprofile.css
+++ b/frontend/src/assets/css/damnprofile.css
@@ -2,6 +2,7 @@
     margin-left: 350px;
     margin-right: 500px;
     margin-top: 25px;
+    min-width: 1400px;
     width: 100%;
     max-width: 1000px;
     height: 750px;
