--- a/frontend/src/assets/css/damnlistDetail.css
+++ b/frontend/src/assets/css/damnlistDetail.css
@@ -153,7 +153,7 @@
   .damndetailcondition1 .damndetailstudent {
     font-family: 'GmarketSans', sans-bold;
     font-size: 20px;
-    margin-left: 500px;
+    margin-left: 470px;
     margin-top: 20px;
     color: black;
   }
@@ -231,4 +231,9 @@
     font-family: 'GmarketSans', sans-bold;
     margin-left: 40px;
     font-size: 18px;
+  }
+
+  .damndetaillocation1 .worklocationkakaomap {
+    max-width: 1200px;
+    height: 200px;
   }
